--- a/materials/lab1/lab1.ipynb
+++ b/materials/lab1/lab1.ipynb
@@ -13,6 +13,8 @@
         "\n",
         "These files consist of multiple cells containing text or code. You can edit an existing cell by double-clicking it. You can insert text by clicking the \"+ Text\" button in the top left corner and add code by clicking the \"+ Code\" button. To add your answers, simply double-click on the cell that says \"*ADD YOUR ANSWERS HERE*\".\n",
         "\n",
+        "FIRST STEP OF ALL PRACTICALS: Click on File -> Save a copy in Drive. Work on that file!.\n",
+        "\n",
         "You will need to submit the labs as a PDF by 17:00 the following Monday. This can be done directly from Colab (File -> Print --> PDF), or you can copy the answers into a Word document and export it as a PDF."
       ],
       "metadata": {
