--- a/materials/lab1/lab1.ipynb
+++ b/materials/lab1/lab1.ipynb
@@ -1649,12 +1649,14 @@
         "\n",
         "Skim through the paper *Social capital I: measurement and associations with economic mobility* (Chetty et al., 2022) (linked [here](https://www.nature.com/articles/s41586-022-04996-4)). You don't have to focus too much on the results and implications of the paper, but rather on the type of data it draws upon.\n",
         "\n",
-        "Reflect on the 8 characteristics of digital trace data that were discussed in the lecture by answering the following questions about the data used in the paper:\n",
+        "Reflect on the characteristics of digital trace data that were discussed in the lecture by answering the following questions about the data used in the paper:\n",
         "\n",
         "- Is it ready made or custom made?\n",
+        "- Do you think measuring social capital using Facebook data would be accurate for young people? and for old people? Why or why not?\n",
         "- What is the size?\n",
         "- Is the data always on?\n",
-        "- Do you think measuring social capital using Facebook data would be accurate for young people? and for old people? Why or why not?\n",
+        "- Is the data reactive?\n",
+        "- Is Facebook data representative?\n",
         "- Is the data drifting?\n",
         "- Is this data algorithmically confounded?\n",
         "- Is it sensitive data? What opportunities for harm may be there if the data is leaked?\n",
