edit answers to lab 5

--- a/materials/lab5/lab5_solutions.ipynb
+++ b/materials/lab5/lab5_solutions.ipynb
@@ -75,7 +75,7 @@
     "- *author*: Comment's author\n",
     "- *body*: Text of the comment\n",
     "- *controversiality*: Controversiality score (0 to 1)\n",
-    "- *score*: (-449 to 1.47*10^9)\n",
+    "- *score*: original score by reddit (-449 to 1.47*10^9)\n",
     "- *created_utc*: Time & date of creation"
    ]
   },
@@ -1301,11 +1301,11 @@
     "### 3.2 Based on the confusion matrixes below per group\n",
     "* What group has a higher false positive rate (false positives / predicted positive)?\n",
     "\n",
-    "*ADD ANSWER HERE*\n",
+    "*male* has the highest false-positive rate (0.019).\n",
     "\n",
     "* What group has a higher false negative rate (false negative / predicted negatives)?\n",
     "\n",
-    "*ADD ANSWER HERE*"
+    "*female* has the highest false-negative rate (1)."
    ]
   },
   {
@@ -2693,7 +2693,13 @@
     "id": "02fhvtRZzhrv"
    },
    "source": [
-    "*ADD ANSWER HERE*"
+    "Answer:\n",
+    "\n",
+    "- Intervention is assisitive\n",
+    "- Intervene with most people with need\n",
+    "- e.g. Predictive equity for peiole with actual need\n",
+    "\n",
+    "--> FNR Parity"
    ]
   },
   {
@@ -2706,6 +2712,16 @@
     "### 3.4 Imagine you are using the ML model for a punitive intervention: you want to detect hate speech and fine those people. Which metric would you use to assess fairness?\n",
     "\n",
     "Hint: see the [decision tree](https://www.datasciencepublicpolicy.org/our-work/tools-guides/aequitas/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Intervention is punitive\n",
+    "- e.g. We don't want to punish people with no hate speech\n",
+    "\n",
+    "--> FPR parity"
    ]
   },
   {
