--- a/materials/lab5/lab5_solutions.ipynb
+++ b/materials/lab5/lab5_solutions.ipynb
@@ -530,7 +530,7 @@
     "DSA: 0.53\n",
     "Statistics: 0.36\n",
     "\n",
-    "--> TNR is most negative\n"
+    "--> TNR is slightly more negative than DSA\n"
    ]
   },
   {
@@ -645,7 +645,7 @@
     "id": "UGC1R43AythD"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "Answer e.g. you will be introducing processing error. "
    ]
   },
   {
@@ -2748,7 +2748,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "- You need the \"true data\" and the data on the sensitive attributes (e.g. gender, race). \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2766,7 +2768,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2780,7 +2782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.15"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
