lab5 solutions clean

--- a/materials/lab5/lab5_solutions.ipynb
+++ b/materials/lab5/lab5_solutions.ipynb
@@ -235,28 +235,19 @@
     "Answer:\n",
     "\n",
     "**Statistics**\n",
-    "\n",
-    "'You had me until Patriots. \\n\\nFuck the Pats, fuck Tom Brady, fuck Bill Belichick, go Mahomes',\n",
-    "'Statisticians are too good to mingle with the philistines in Machine Learning, hey',\n",
-    "       'I really like the presentation, but I really want to slap to the idiot playing with the video camera.',\n",
-    "       \"I was unnecessarily harsh in my last comment. It's not a dumb argument, it's just an argument I don't agree with. I'm sorry.\\n\\nThere were two (muddled) points I was trying to make.\\n\\n1.\\tUnder the null the mean of the test statistic should be zero. Any particular observation will not be zero, but a hypothetical sample of test statistic will have a zero mean. You don't have to believe that your particular test statistic is 0 just that, over the whole population, it will have zero mean. I think that's an important distinction.\\n2.\\tI agree that in reality you will never actually have, say, two groups where the difference is exactly 0. If you reject the null because you're actually picking up a tiny but real effect, then you can ignore it. Just because you reject the null doesn't mean you have to accept the results as having meaningful real world significance.\",\n",
-    "       \"I'm saying that it's hard to meet a person who is really a Frequentist.  Some people think they are Frequentist, but they're not.  That makes it difficult for me to really learn anything on the topic.  What I can tell you is that I have dealt with a number of stupid people that called themselves Frequentists - I don't know that that means other than I have to be careful who I work with!\"\n",
+    "* 'You had me until Patriots. \\n\\nFuck the Pats, fuck Tom Brady, fuck Bill Belichick, go Mahomes',\n",
+    "* 'Statisticians are too good to mingle with the philistines in Machine Learning, hey',\n",
+    "* 'I really like the presentation, but I really want to slap to the idiot playing with the video camera.',\n",
     "\n",
     "**DSA**\n",
-    "\n",
-    "['Nah just rednecks who will never see a protest in their life are terrified. \\n\\nJust like they were terrified of Islamic extremists.',\n",
-    "       'Wow. This is truly disgusting. Equating the victims of a campaign of genocide with the perpetrators. Idc what you think of Hamas - they are the vanguard of the Resistance in Palestine; they are the ones the Palestinians have chosen to fight for their liberation. As such, they deserve our unqualified support. Otherwise you are \"both-sidesing\" genocide.',\n",
-    "       'Just blocked them. They’re all human filth so I’ll just keep convincing the people in my personal life to vot for Bernie instead. Thanks for the advice even though I knew this is what it would come to. My OCD makes it painful not to see new information',\n",
-    "       'Fuck you too then, you are on the wrong side of history. You would be that dork telling me why the Haitians don’t actually deserve to be free, because they “suck”',\n",
-    "       'I agree, I think a lot of these people challenging actual leftists in Congress, be it in the Democratic primary or in the general election as a Republican, are doing it largely so that they can grift people to donate to them to stop these \"far-left extremists\".']\n",
-    "\n",
+    "* 'Nah just rednecks who will never see a protest in their life are terrified. \\n\\nJust like they were terrified of Islamic extremists.',\n",
+    "* 'Wow. This is truly disgusting. Equating the victims of a campaign of genocide with the perpetrators. Idc what you think of Hamas - they are the vanguard of the Resistance in Palestine; they are the ones the Palestinians have chosen to fight for their liberation. As such, they deserve our unqualified support. Otherwise you are \"both-sidesing\" genocide.',\n",
+    "* 'Just blocked them. They’re all human filth so I’ll just keep convincing the people in my personal life to vot for Bernie instead. Thanks for the advice even though I knew this is what it would come to. My OCD makes it painful not to see new information',\n",
+    "       \n",
     "**TNR**\n",
-    "\n",
-    "['Fuck that faggot fredo. \\n\\n-an Italian',\n",
-    "       'The one dude is now a professional builder or something, so yeah. This fat little lefty faggot is about 30-50 lbs overweight and living at home.',\n",
-    "       \"Mexico deports illegal aliens, therefore, Mexicans are Nazis. The USA deports illegal aliens from Mexico, therefore Americans are Nazis. But wait, how can they be Nazis for deporting Nazis? Wouldn't America be less Nazi as a result of removing Nazis?\\n\\nDude's 'logic' isn't internally consistent, and it doesn't make any sense.\",\n",
-    "       \"&gt;You don't downvote yet you just did it,\\n\\n[Nope. ](https://i.imgur.com/bJbAily.png) That's somebody else who thinks you're being a fag, too. I don't downvote because karma is something only faggots care about. That's why you care so kucn right now.\\n\\n&gt;Don't flatter yourself. It's apparent that any topic you can't defend is unimportant.\\n\\nImagine caring this much about the opinions of strangers on the internet. You should go outside.\",\n",
-    "       \"Making up an argument that the other side has to make yourself appear right. Not my fault you're a retarded faggot\"]\n"
+    "* 'Fuck that faggot fredo. \\n\\n-an Italian',\n",
+    "* 'The one dude is now a professional builder or something, so yeah. This fat little lefty faggot is about 30-50 lbs overweight and living at home.',\n",
+    "* \"Mexico deports illegal aliens, therefore, Mexicans are Nazis. The USA deports illegal aliens from Mexico, therefore Americans are Nazis. But wait, how can they be Nazis for deporting Nazis? Wouldn't America be less Nazi as a result of removing Nazis?\\n\\nDude's 'logic' isn't internally consistent, and it doesn't make any sense.\",\n"
    ]
   },
   {
@@ -410,15 +401,6 @@
    "source": [
     "Answer:\n",
     "\n",
-    "*With classifying everything above 0.5 as hate speech*:\n",
-    "\n",
-    "- TNR: 7.3%\n",
-    "- DSA: 3.5%\n",
-    "- Stats: 0.2%\n",
-    "\n",
-    "\n",
-    "*With using mean*\n",
-    "\n",
     "- TNR: 12.3%\n",
     "- DSA: 9.5%\n",
     "- Stats: 3.8%\n",
@@ -435,6 +417,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dsa_label.sort_values(by='hate_score', ascending=False)['body'].iloc[4]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "SH2FRgxOuUTr"
@@ -442,11 +433,9 @@
    "source": [
     "Answer:\n",
     "\n",
-    "df_dsa_label.sort_values(by='hate_score', ascending=False)['body'].iloc[4]\n",
-    "\n",
     "For example: \"I agree, I think a lot of these people challenging actual leftists in Congress, be it in the Democratic primary or in the general election as a Republican, are doing it largely so that they can grift people to donate to them to stop these \"far-left extremists\".\"\n",
     "\n",
-    "Could be due to mentioning extremist"
+    "It may be classified as hate speech because of the word \"leftist\", which may be used in a derogatory manner in the training dataset."
    ]
   },
   {
@@ -501,29 +490,20 @@
     "Answer:\n",
     "\n",
     "**TheNewRight**\n",
-    "\n",
-    "['FRY HER. She is perhaps the worst of them all because she COMPLETELY abrogated her duty as AG. Cankled scumbag.'\n",
-    " 'No its ridiculous at the airport even more ridiculous when its refugees. You soulless pieces of shit.'\n",
-    " 'That cretin is white as well, the fuck is wrong with these people? Has he ever tried taking a stroll in the hood with that stupid face, to see what his beloved poc do to dumb virtue signalers like him? '\n",
-    " 'I cannot believe this America hating bitch has a position in office. Unbelievable.'\n",
-    " 'I barely want to go back there. Idiots made themselves look weak.']\n",
-    "\n",
+    "* 'FRY HER. She is perhaps the worst of them all because she COMPLETELY abrogated her duty as AG. Cankled scumbag.'\n",
+    "* 'No its ridiculous at the airport even more ridiculous when its refugees. You soulless pieces of shit.'\n",
+    "* 'That cretin is white as well, the fuck is wrong with these people? Has he ever tried taking a stroll in the hood with that stupid face, to see what his beloved poc do to dumb virtue signalers like him? '\n",
+    " \n",
     "**DSA**\n",
-    "\n",
-    "['What a fucking coward fake pos u/magictheblathering is. Dude not only blocked me but sent the reddit suicide crisis to me after wishing for my death. Most sane “leftist”'\n",
-    " 'What a spineless, dishonest, embarrassing twist of a response. On the topic of a fucking genocide. You should be ashamed.'\n",
-    " 'you weird debate lord i do not give a shit about this stupid dsasubreddit, i care about the brown kids see dying every day. i didnt vote for him the first time either lmao'\n",
-    " 'Fuck you too then, you are on the wrong side of history. You would be that dork telling me why the Haitians don’t actually deserve to be free, because they “suck”'\n",
-    " 'The WSWS is total trash. The ICFI are anti-union scabs. The SEP are not our allies. They’re total pariahs on the left for a reason. I do not trust anything that they say &amp; neither should you.']\n",
-    "\n",
+    "* 'What a fucking coward fake pos u/magictheblathering is. Dude not only blocked me but sent the reddit suicide crisis to me after wishing for my death. Most sane “leftist”'\n",
+    "* 'What a spineless, dishonest, embarrassing twist of a response. On the topic of a fucking genocide. You should be ashamed.'\n",
+    "* 'you weird debate lord i do not give a shit about this stupid dsasubreddit, i care about the brown kids see dying every day. i didnt vote for him the first time either lmao'\n",
+    " \n",
     "**Statistics**\n",
-    "\n",
-    "[\"UGH - don't take this or anything at this university!!!\"\n",
-    " 'Or put one of them in the sidebar? Reddit has a notoriously shitty search feature. '\n",
-    " 'Paywalls suck. Best of luck getting those articles, and mad respect for studying on the side!'\n",
-    " 'Who the hell is upvoting this? This is not statistics content. '\n",
-    " \"That SAS certification is annoying but easily doable....I did it last spring in undergrad. It makes me recall why I hate multiple choice. The exam will try to trick you; that's mainly what it's about are the small details (I'm assuming you're doing base).\"]\n",
-    "\n",
+    "* \"UGH - don't take this or anything at this university!!!\"\n",
+    "* 'Or put one of them in the sidebar? Reddit has a notoriously shitty search feature. '\n",
+    "* 'Paywalls suck. Best of luck getting those articles, and mad respect for studying on the side!'\n",
+    " \n",
     "**Average hate score for each subreddit**\n",
     "\n",
     "TheNewRight: 0.54\n",
@@ -551,6 +531,16 @@
     "print(df_dsa_label_sent['score'].corr(df_dsa_label_sent['hate_score']))\n",
     "print(df_tnr_label_sent['score'].corr(df_tnr_label_sent['hate_score']))\n",
     "print(df_stats_label_sent['score'].corr(df_stats_label_sent['hate_score']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The correlation between sentiment score and hate score is quite low\n",
+    "DSA: 4.9%\n",
+    "TNR: 4.2%\n",
+    "Statistics: -1.1%"
    ]
   },
   {
@@ -602,10 +592,9 @@
    "source": [
     "Answer:\n",
     "\n",
-    "e.g.\n",
+    "The model was trained on Twitter and Stormfront data. This is most likely not representative of Reddit data, especially the Statistics (very nerdy) and DSA (left wing). \n",
     "\n",
-    "- model trained on Twitter and Stormfront data; potentially not representative of Reddit users\n",
-    "- could overestimate no of negative comments due to being trained on more extreme data"
+    "The model will not be able to perform well for subpopulations that were not present in the training data. For example, it may overestimate the hate speech with terms used in Twitter/Stormfront in a derogatory context, such as \"lefties\". "
    ]
   },
   {
@@ -625,9 +614,7 @@
    "source": [
     "Answer:\n",
     "\n",
-    "e.g.\n",
-    "\n",
-    "overclassifying of hate speech due to training on toxic forums"
+    "Different datasets/papers use different definitions of hate speech. If the definition of hate speech is different for the data on Stormfront and the data on Twitter, this could create different meanings for the outcome variable (the label) for different subpopulations."
    ]
   },
   {
@@ -645,7 +632,7 @@
     "id": "UGC1R43AythD"
    },
    "source": [
-    "Answer e.g. you will be introducing processing error. "
+    "You will be introducing processing error. "
    ]
   },
   {
@@ -1299,13 +1286,13 @@
    },
    "source": [
     "### 3.2 Based on the confusion matrixes below per group\n",
-    "* What group has a higher false positive rate (false positives / predicted positive)?\n",
+    "* What group has a higher false positive rate (false positives / negatives)?\n",
     "\n",
-    "*male* has the highest false-positive rate (0.019).\n",
+    "*male* has the highest false-positive rate (0.019 = 3/(3+153)).\n",
     "\n",
-    "* What group has a higher false negative rate (false negative / predicted negatives)?\n",
+    "* What group has a higher false negative rate (false negative / positives)?\n",
     "\n",
-    "*female* has the highest false-negative rate (1)."
+    "*female* has the highest false-negative rate (0.24 = 5/(5+16))."
    ]
   },
   {
@@ -2577,7 +2564,7 @@
    "source": [
     "metrics = [\"fpr\"] # specify metrics\n",
     "\n",
-    "disparity_tolerance = 1.25 # specify tolerance thresholds\n",
+    "disparity_tolerance = 1.25 # specify tolerance thresholds (at most 25% disparity)\n",
     "audit.summary_plot(metrics=metrics, fairness_threshold=disparity_tolerance) # plot metrics with specified thresholds"
    ]
   },
@@ -2693,13 +2680,11 @@
     "id": "02fhvtRZzhrv"
    },
    "source": [
-    "Answer:\n",
+    "Answer: The intervention is assisitive.\n",
     "\n",
-    "- Intervention is assisitive\n",
-    "- Intervene with most people with need\n",
-    "- e.g. Predictive equity for peiole with actual need\n",
-    "\n",
-    "--> FNR Parity"
+    "The answer depends on your ability to provide mental health resources to people. \n",
+    "* If you are able to intervene most people --> False negative rate parity (you don't want to exclude people in need)\n",
+    "* If you are able to intervene few people --> True positive rate parity (you don't want to give precious resources to people not in need)\n"
    ]
   },
   {
@@ -2718,10 +2703,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Intervention is punitive\n",
-    "- e.g. We don't want to punish people with no hate speech\n",
+    "Answer: The intervention is punitive.\n",
     "\n",
-    "--> FPR parity"
+    "The answer is False positive rate parity (you don't want to punish innocent people)\n"
    ]
   },
   {
@@ -2744,12 +2728,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "- You need the \"true data\" and the data on the sensitive attributes (e.g. gender, race). \n"
+    "Answer: You need the \"true data\" and the data on the sensitive attributes (e.g. gender, race). You likely do not have that information in your project.\n"
    ]
   },
   {
