update labs, lectures and reading of my weeks

--- a/materials/lab2/lab2.ipynb
+++ b/materials/lab2/lab2.ipynb
@@ -494,7 +494,7 @@
         "print(df.head())\n",
         "\n",
         "# Normalize data\n",
-        "data_foryou_normalized = pd.json_normalize(df['data'])\n",
+        "data_foryou_normalized = pd.json_normalize(df_foryou['data'])\n",
         "pd.options.display.max_columns = 100\n",
         "# Print first lines\n",
         "data_foryou_normalized.head(20)[\"desc\"].values\n",
@@ -525,7 +525,7 @@
       "source": [
         "## Part 3: Analyzing Your Own Digital Trace Data\n",
         "\n",
-        "We are now going to inspect our own digital trace data. You can choose to inspect data from ChatGPT, YouTube or Instagram. If you choose to look into YouTube or Instagram, you have likely already requested your data last week. Please go to our [Digital Footprint Explorer](http://trbknl.github.io/dd-education/) to continue."
+        "We are now going to inspect our own digital trace data. You can choose to inspect data from ChatGPT, YouTube or Instagram. If you choose to look into YouTube or Instagram, you have likely already requested your data last week. Please go to our [Digital Footprint Explorer](http://trbknl.github.io/dd-education/) to continue. We expect you to explore data from at least two out of three platforms."
       ],
       "metadata": {
         "id": "LknXotz2_WG9"
