--- a/materials/lab6/lab6.ipynb
+++ b/materials/lab6/lab6.ipynb
@@ -35,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In the lecture of week 2 (on user-centric approaches), we discussed the Screenomics project. It was discussed in the paper by [Ohme et al. (2024)](https://doi.org/10.1080/19312458.2023.2181319). You can also search for more information about this project online or in multiple other research papers. In this assignment, we reflect on the four ethical principles (and four challenges) described by Salganik in [Bit by Bit Chapter 6](https://www.bitbybitbook.com/en/1st-ed/ethics/principles/).\n",
+        "In the lecture of week 2 (on user-centric approaches), we discussed the Screenomics project. You can also search for more information about this project online or in multiple other research papers. In this assignment, we reflect on the four ethical principles (and four challenges) described by Salganik in [Bit by Bit Chapter 6](https://www.bitbybitbook.com/en/1st-ed/ethics/principles/).\n",
         "\n",
         "The first principle is “Respect for persons”."
       ],
@@ -390,7 +390,7 @@
       "source": [
         "## Assignment 2\n",
         "\n",
-        "As part of the first group assignment, you have filled in the [PRIDE](https://ferb.sites.uu.nl/wp-content/uploads/sites/432/2020/12/PRIDE-Questionnaire-for-approval-Single-Study.docx) form from the FETC. In this assignment, we reflect on how the principles and challenges discussed are represented in the PRIDE form."
+        "As part of the second group assignment, you will fill in the [PRIDE](https://ferb.sites.uu.nl/wp-content/uploads/sites/432/2020/12/PRIDE-Questionnaire-for-approval-Single-Study.docx) form from the FETC. In this assignment, we reflect on how the principles and challenges discussed are represented in the PRIDE form."
       ],
       "metadata": {
         "id": "ixIx6Hdn3RG2"
@@ -543,7 +543,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "9. After you learned more about ethics this week, are there any changes you want to make to the answers that you provided in the PRIDE form submitted for your group assignment? If yes, what are those changes?"
+        "9. If you haven't filled in the PRIDE form yet for your group assignment, you might want to take a moment with your group to look into this together during the lab meeting. In case you already did fill it in, look whether you want to make some changes to the answers that you provided."
       ],
       "metadata": {
         "id": "IvlAWt1j3QV5"
