--- a/materials/lab6/lab6_solutions.ipynb
+++ b/materials/lab6/lab6_solutions.ipynb
@@ -26,6 +26,7 @@
    "source": [
     "In the lecture of week 2 (on user-centric approaches), we discussed the Screenomics project which is also discussed in the paper by Ram et al. (2019). In this assignment, we reflect on the four ethical principles (and four challenges) described by Salganik in [Bit by Bit Chapter 6](https://www.bitbybitbook.com/en/1st-ed/ethics/principles/).\n",
     "\n",
+    "\n",
     "The first principle is “Respect for persons”."
    ]
   },
@@ -44,7 +45,7 @@
     "id": "uqFdPdGU1lR9"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Crucial is that researchers need to obtain informed consent if possible in any way.*"
    ]
   },
   {
@@ -62,7 +63,7 @@
     "id": "ccbsE3oR1lL9"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: There is no information about this in the paper. You can assume that the participants at least got informed about what happens before the study starts and before they install the app, but once the app is working, it is unknown to what extent the participants know which screenshots are being shared, and also for wat research purposes these are being used.*"
    ]
   },
   {
@@ -80,7 +81,7 @@
     "id": "wyChN7Au1lF1"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: It could for example be really nice if participants could have a dashboard where they can also see (a sample of) the screenshots collected about them or receive regular updates about the studies for which their data has been used.*"
    ]
   },
   {
@@ -98,7 +99,7 @@
     "id": "tzg9NnDJ1lAG"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Increasing risk, compromising research goals, logistical limitations.*"
    ]
   },
   {
@@ -108,6 +109,21 @@
    },
    "source": [
     "5. To what extent can these reasons play a role consent of in the Screenomics project? Give a potential explanation for every reason."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "qQf3DfoJ5bVA"
+   },
+   "source": [
+    "*Answer:*\n",
+    "\n",
+    "*Increasing risk: I don’t think this is relevant.*\n",
+    "\n",
+    "*Compromising research goals: if a consent form mentions explicitly that a sensitive feature will be derived from their data (for probability of having an eating disorder), people at risk might be less likely to participate.*\n",
+    "   \n",
+    "*Logistical limitations: I can also imagine that many of the research questions only come after first explorations of the data have been done, and that this is an ongoing process.*"
    ]
   },
   {
@@ -134,7 +150,7 @@
     "id": "WCuiQm5Q1k1E"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: It means that you understand what is at risk for what people because of this study, and that you weigh this with respect to the benefits of the study, and search for an appropriate balance here.*"
    ]
   },
   {
@@ -152,7 +168,7 @@
     "id": "wbTElqpp1kvB"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: They seem very private with their app and their data, so they definitely understand there are huge privacy risks if that data would become public. However, it is not clear if researchers interested in using the data for example get to see the raw screenshots or if that is protected in any way.*"
    ]
   },
   {
@@ -170,7 +186,7 @@
     "id": "_UP3GvL91kp0"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: A good idea would for example be to only have a small core group of researchers having access to the raw data, and that they for example do classifications of the screenshots on topics of interest to other researchers, and that they give out those kinds of datasets, and never the raw screenshots.*"
    ]
   },
   {
@@ -188,7 +204,7 @@
     "id": "sfmXyIpw1kjd"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Many things can be disclosed, their private messages can disclose a lot of sensitive information, being on dating apps, what people search for online, potential diseases or mental health issues. Private meetings in their calendar, calls, also “official” information such as banking information or government information if this can be accessed through an app or website.*"
    ]
   },
   {
@@ -203,10 +219,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "oNG5lM1774ZI"
+    "id": "c4auZUTB5-wP"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Raw screenshots can probably never be shared, only if they are highly redacted and to a selected group of researchers, probably only in a secure environment. Aggregated of the data (processed to classifications for example) could be made available to a wider audience, but likely never completely public.*"
    ]
   },
   {
@@ -233,7 +249,7 @@
     "id": "4zio-5OY1kIg"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Justice is about ensuring that the risks and benefits of the study are distributed.*"
    ]
   },
   {
@@ -251,7 +267,7 @@
     "id": "Y7DB-dzy2xia"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: There are two important aspects here. The first is that vulnerable people should be protected from researchers. From the paper, it is unclear whether any measures were taken to prevent this. Second, compensation is important. It is also now known whether participants were compensated based on the paper.*"
    ]
   },
   {
@@ -269,7 +285,7 @@
     "id": "4l_IoD1b2xcT"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: A decent monetary compensation would make sense for the effort of installing an app and also running that app for the duration of the study. Vulnerable people is a more challenging topic, because it seems like the project did not make explicit in advance on what topics they would do research using the data, and it also looked like new projects keep emerging. So it is also hard to determine in advance vulnerable with respect to what?*"
    ]
   },
   {
@@ -296,7 +312,7 @@
     "id": "D9JcGEEv2xTU"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: This consists of compliance with law and also transparency-based accountability.*"
    ]
   },
   {
@@ -314,7 +330,7 @@
     "id": "NC4_oqxk2xNn"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: I cannot think of any legislation they are not complicit with. However, it seems like they come up with new research projects after the data has been collected, so they should keep their participants informed on these developments.*"
    ]
   },
   {
@@ -332,7 +348,7 @@
     "id": "IbLw4cvG2xID"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: The app that is being used to make the screenshots could maybe also occasionally send updates the participants when their data is being used for certain studies. Or a generic project website can help with this as well.*  "
    ]
   },
   {
@@ -350,7 +366,7 @@
     "id": "ayzXc0Me2xBj"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Actors, Attributes and Transmission principles.*"
    ]
   },
   {
@@ -368,7 +384,7 @@
     "id": "Rap31pqC3RJ-"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: All screenshots [attributes] can be accessed by a limited group of selected researchers [actors] for use of different research project to the oversight of the Screenomics team [transmission principles].*"
    ]
   },
   {
@@ -397,7 +413,9 @@
     "id": "vmPPXK6E3RBH"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Under study details (II), questions are asked about whether the participants are old enough, mentally competent, etc.\n",
+    "\n",
+    "Also, questions about in and exclusion criteria of participants, time to think about participation, termination of participation and dependency on the researcher are asked under “Participants”.*"
    ]
   },
   {
@@ -415,7 +433,7 @@
     "id": "dQM4-l3h3Q7Y"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Under study details (II), the researcher is asked to compare the risks that can come from this study to risks in everyday life. Also, yes/no questions tick off many types of questions that can pose risks to the participants.*"
    ]
   },
   {
@@ -433,7 +451,7 @@
     "id": "5vChAfMf3Q1i"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Under “Participants” it is asked what the investment of the participants is and how they are being compensated for this, and whether the compensation is conditional.*"
    ]
   },
   {
@@ -451,7 +469,7 @@
     "id": "WwAb7EZM3Qvz"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: There is no question in the form explicitly focussing on this.*"
    ]
   },
   {
@@ -469,7 +487,7 @@
     "id": "sT1V4sry3QqF"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Under study details (II) it is asked if participants provide active informed consent.*"
    ]
   },
   {
@@ -487,7 +505,7 @@
     "id": "YDLkhPAt3Qj9"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Under “Datamagement”, questions are asked about who is responsible for datamanagement, and who will have access to the data, and how data is being made available.*"
    ]
   },
   {
@@ -505,7 +523,7 @@
     "id": "Ou6jJucJ3QeI"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Under “Study details (I), there are questions about the use of existing data and if participants can be identified or re-identified, as well as whether it contains public behaviour or highly private information.*"
    ]
   },
   {
@@ -523,7 +541,7 @@
     "id": "SGhCBepY3QYn"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: The power analysis is part of question 5 under “Participants”.*"
    ]
   },
   {
@@ -533,15 +551,6 @@
    },
    "source": [
     "9. If you haven't filled in the PRIDE form yet for your group assignment, you might want to take a moment with your group to look into this together during the lab meeting. In case you already did fill it in, look whether you want to make some changes to the answers that you provided."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "EuwJSXWQ3QTH"
-   },
-   "source": [
-    "*ADD YOUR ANSWER HERE*"
    ]
   },
   {
@@ -572,7 +581,7 @@
     "id": "z5z8PSxk3QLL"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Transparency, accountability, fairness and nondiscrimination.*"
    ]
   },
   {
@@ -590,7 +599,11 @@
     "id": "wd-lEVbn3QFO"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer:*\n",
+    "- *Transparency is stated as one of their key design principles. They state they always need to be sincere and justify their actions. They also state to develop a culture of transparency, about ingredient use (which is probably the law). They also state that they are transparent in their science communication (also mention reproducibility here), and be transparent about their technology use. They explain how transparency and confidentiality are balanced.*\n",
+    "- *Accountability is managed through the global ethics department and ethics correspondents who oversee what they call “Speak Up” investigations. A Speak Up seems to be a way to raise an ethical concern.*\n",
+    "- *Fairness is mention with respect to the use of AI (p. 20), and also with respect to the selection criteria they use to select business partners. In addition, also when it comes to their HR policy.*\n",
+    "- *Nondiscrimination is listed as one of  the human rights they are committed to respect. It is again mentioned in the context of consumers, the context of corruption within businesses and in HR.*  "
    ]
   },
   {
@@ -608,7 +621,7 @@
     "id": "Hf5UVroY3QAB"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Aspirational, advisory and disciplinary codes.*"
    ]
   },
   {
@@ -626,7 +639,7 @@
     "id": "klx3A4yD3P6S"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: None of these codes are mentioned explicitly, but it seems like “Speak Up” tries to cover this.*"
    ]
   },
   {
@@ -644,7 +657,7 @@
     "id": "bewNfTdi3PgX"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer: Setting up an ethics board, hire ethicists within teams, install ethics communities, or have enforcement mechanisms such as structural accountability, reporting requirements and audits of those reports.*"
    ]
   },
   {
@@ -662,7 +675,13 @@
     "id": "XRChOQK74WtO"
    },
    "source": [
-    "*ADD YOUR ANSWER HERE*"
+    "*Answer:*\n",
+    "- *Setting up an ethics board.*\n",
+    "- *Hire ethicists within design teams.*  \n",
+    "- *Install ethics communities to monitor activities and advise on issues.*  \n",
+    "- *Structural accountability within and beyond the firm.*   \n",
+    "- *Reporting requirements.*  \n",
+    "- *Auditing of reporting.*   "
    ]
   },
   {
@@ -672,15 +691,6 @@
    },
    "source": [
     "7. What is your overall evaluation of the code of ethics of L’oreal?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "4GV_ij254WR-"
-   },
-   "source": [
-    "*ADD YOUR ANSWER HERE*"
    ]
   }
  ],
